# someip-wire

./: Cargo.toml  LICENSE-MIT  README.md
src/: error.rs  field.rs  lib.rs  packet.rs  payload.rs  prelude.rs  repr.rs  types.rs
