[package]
name = "someip-wire"
version = "0.1.0"
edition = "2024"
authors = ["Martin Pålsson <martin@poleshift.se>"]
license = "MIT OR Apache-2.0"
description = "A no_std SOME/IP wire protocol parser and serializer with zero-allocation design"
repository = "https://github.com/martinpalsson/someip-wire"
keywords = ["someip", "automotive", "protocol", "parser", "embedded"]
categories = ["embedded", "network-programming", "no-std", "parser-implementations", "automotive"]
readme = "README.md"

[dependencies]
byteorder = { version = "1.5.0", default-features = false }
